--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,21 @@ img {
   outline: none; /* Remove the ugly outline */
 }
 
+.showcase::before,
+.showcase::after {
+  content: ''; /* Need content to use before/after */
+  position: absolute;
+  height: 100px;
+  bottom: -70px;
+  right: 0;
+  left: 0;
+  background-color: #fff;
+  transform: skewY(-3deg);
+  -webkit-transform: skewY(-3deg);
+  -moz-transform: skewY(-3deg);
+  -ms-transform: skewY(-3deg);
+}
+
 /* Utilities */
 .container {
   max-width: 1100px;
