--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ a {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-weight: 300;
   line-height: 1.2;
   margin: 10px 0;
@@ -130,54 +131,21 @@ img {
   -ms-transform: skewY(-3deg);
 }
 
-/* Utilities */
-.container {
-  max-width: 1100px;
-  margin: 0 auto; /* Necessary to make sure the margin on right/left stays there and uses max-width 1100px */
-  overflow: auto; /* To get rid of any margin overflows from other elements */
-  padding: 0 40px;
+/* Stats */
+.stats {
+  padding-top: 100px;
 }
 
-.card {
-  background-color: #fff;
-  color: #333;
-  border-radius: 10px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  margin: 10px;
+.stats-heading {
+  max-width: 500px;
+  margin: auto;
 }
 
-.btn {
-  display: inline-block;
-  padding: 10px 30px;
-  cursor: pointer;
-  background: var(--primary-color);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
+.stats .grid h3 {
+  font-size: 35px;
 }
 
-.btn-outline {
-  background-color: transparent;
-  border: 1px #fff solid;
-}
-
-.btn:hover {
-  transform: scale(0.98);
-}
-
-.flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+.stats .grid p {
+  font-size: 20px;
+  font-weight: bold;
 }
