--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 /* Base Styles */
 :root {
   --primary-color: #047aed;
+  --secondary-color: #1c3fa8;
+  --light-color: #f4f4f4;
+  --dark-color: #002240;
 }
 
 * {
@@ -159,4 +162,9 @@ img {
 .cli .grid > *:first-child {
   grid-column: 1 / span 2;
   grid-row: 1 / span 2;
+}
+
+/* Cloud */
+.cloud .grid {
+  grid-template-columns: 4fr 3fr;
 }
