--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,12 @@ img {
 .languages .card:hover {
   transform: translateY(-15px);
 }
+
+/* Footer */
+.footer .social {
+  text-align: right;
+}
+
+.footer .social a {
+  margin: 0 10px;
+}
