--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
   --secondary-color: #1c3fa8;
   --light-color: #f4f4f4;
   --dark-color: #002240;
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
 }
 
 * {
@@ -43,6 +45,13 @@ p {
 
 img {
   width: 100%; /* to keep images in their container */
+}
+
+code,
+pre {
+  background: #333;
+  color: #fff;
+  padding: 10px;
 }
 
 /* NavBar */
